# runmany

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  argv.many  bad_pyproject.toml  bad_pytest.ini  coverage.txt  debugtox.py  default_languages.json  helloworld.many  input.many  languages.json  myfile.kt  mypy.ini  notes.txt  pyproject.toml  pytest.ini  readme-todo.txt  requirements.txt  runcoverage.py  runmany.py  runpytest.py  runtox.py  runtoxdebug.py  sample.many  setup.cfg  setup.py  test it.py  test-todo.txt  test.java  test.json  test.many  test.out  test.output  test.py  test.txt  test2.many  testing.py  (+2 more)
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml
examples/: argv.many  argv_output.txt  hellolanguage.many  hellolanguage_output.txt  helloworld.many  helloworld_output.txt  inputs.many  inputs_output.txt  polyglot.many  polyglot_output.txt  primes.json  primes.many  primes_output.txt  sample.many  sample_output.txt  simple.many  simple_ouput.txt  simple_output.txt  syntax.many  syntax_ouput.txt  syntax_output.txt
run_many/: __init__.py  default_languages.json  default_settings.json  false_default_settings.json  parser.py  run_many.py  runmany.py  runner.py  settings.py  util.py
runmany/: default_settings.json  parser.py  runmany.py  runner.py  settings.py  util.py
src/: __init__.py
src/run_many/: __init__.py  default_languages.json  run_many.py  runmany.py
src/runmany/: __init__.py  default_settings.json  new_default_settings.json  newparser.py  newrunner.py  newsettings.py  parser.py  runmany.py  runner.py  settings.py  util.py
tests/: __init__.py  test-todo.txt  test_run_many.py
tests/run_many/: inp.many  out.txt  test_2.py  test_examples.py  test_jsons.py  test_run_many.py  test_syntax.py
tests/run_many/errors/: test_errors.py  todo_test_errors.py
tests/run_many/examples/: test_examples.py
tests/run_many/imports/: test_imports.py  test_wildcard_imports.py  todo_test_wildcard_imports.py
tests/run_many/jsons/: all_name.txt  languages1.txt  languages2.txt  show_argv.txt  show_equal.txt  show_output.txt  show_prologue.txt  show_runs1.txt  show_stdin.txt  spacing1.txt  spacing2.txt  stderr_always.txt  stderr_never.txt  stderr_nzec.txt  test_jsons.py  timeout1.txt  timeout2.txt
tests/run_many/languages_json/: all_name.txt  check_equal.txt  languages1.txt  languages2.txt  (+7 more)
(+115 files in other folders)
