[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42.0", "wheel"]

[tool.pytest.ini_options]
markers = ["slow"]
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
mypy_path = "src"
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ['setuptools', 'tox']
