[metadata]
version = 2.0.2
name = runmany
author = discretegames
author_email = discretizedgames@gmail.com
url = https://github.com/discretegames/TurtLSystems
description = A tool to run many programs written in many languages from one file.
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
project_urls =
	GitHub = https://github.com/discretegames/runmany
	PyPI = https://pypi.org/project/runmany
	TestPyPi = https://test.pypi.org/project/runmany
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Education
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Topic :: Software Development :: Interpreters
	Topic :: Software Development :: Compilers
	Topic :: Software Development :: Build Tools
	Topic :: Utilities
	Typing :: Typed
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
keywords =
	run
	many
	runmany
	execute
	other languages
	multiple languages
	manyfile
	.many
	one file
	programs
	chrestomathy
	polyglot

[options]
python_requires = >=3.6
zip_safe = false
include_package_data = true
packages = runmany
package_dir=
    =src
setup_requires =
    setuptools

[options.package_data]
runmany = py.typed, default_settings.json

[options.entry_points]
console_scripts =
	runmany = runmany.runmany:main


[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 120